# SummerWhisper

./: PyanotteWhisper.ipynb  README.md  SummerWhisper.ipynb  Whisper + Diarization.py  pyproject.toml
anger_26-09-2016.wav_result/: anger_26-09-2016.wav.final_dict.json
